// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App matches snapshot 1`] = `
<DocumentFragment>
  <main>
    <div
      class="layout__accent-bar"
    />
    <h1>
      I am Home
    </h1>
  </main>
</DocumentFragment>
`;

exports[`Pages Article matches snapshot 1`] = `
<DocumentFragment>
  <h1>
    I am ArticleContainer
  </h1>
</DocumentFragment>
`;

exports[`Pages Articles matches snapshot 1`] = `
<DocumentFragment>
  <h1>
    I am ArticlesContainer
  </h1>
</DocumentFragment>
`;

exports[`Pages Home matches snapshot 1`] = `
<DocumentFragment>
  <h1>
    I am Home
  </h1>
</DocumentFragment>
`;
